--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-light navbar-expand-lg border-bottom bg-white fixed-top">
+    <nav class="navbar navbar-light navbar-expand-lg border-bottom bg-white" style="z-index: 1000;">
         <a class="navbar-brand"
            title="Zur Startseite"
            [routerLink]="['/']"
@@ -94,8 +94,8 @@
                        data-toggle="dropdown"
                        aria-haspopup="true"
                        (click)="isCollapsedAcc = !isCollapsedAcc">
-                        <svg width="1.5em"
-                             height="1.5em"
+                        <svg width="1.3em"
+                             height="1.3em"
                              viewBox="0 0 16 16"
                              class="bi bi-file-person"
                              fill="currentColor"
