--- a/power/src/styles.scss
+++ b/power/src/styles.scss
@@ -26,7 +26,7 @@ body {
 
 body {
     margin: 0;
-    padding-top: 56px;
+    padding: 0;
 }
 
 $font-family-sans-serif: // Safari for macOS and iOS (San Francisco)
