--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-light navbar-expand-lg border-bottom bg-white" style="z-index: 1000;">
+    <nav class="navbar navbar-light navbar-expand-lg border-bottom bg-white"
+         style="z-index: 1000;">
         <a class="navbar-brand"
            title="Zur Startseite"
            [routerLink]="['/']"
@@ -15,10 +16,15 @@
                 <span style="color: #c4153a;"
                       i18n>.niedersachsen</span>
             </strong>
-            <strong class="d-md-none">
+            <strong class="d-none d-sm-inline d-md-none">
                 <span i18n>POWER</span>
                 <span style="color: #c4153a;"
                       i18n>.niedersachsen</span>
+            </strong>
+            <strong class="d-inline d-sm-none">
+                <span i18n>POWER</span>
+                <span style="color: #c4153a;"
+                      i18n>.ni</span>
             </strong>
         </a>
 
