--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -259,7 +259,7 @@
                 <button class="btn btn-block"
                         type="button"
                         ngbDropdownToggle>
-                    <span i18n>Stichtag</span>: {{stichtag}}
+                    {{stichtag}}
                 </button>
                 <div class="dropdown-menu"
                      ngbDropdownMenu>
@@ -280,7 +280,7 @@
                 <button class="btn btn-block"
                         type="button"
                         ngbDropdownToggle>
-                    <span i18n>Teilmarkt</span>: {{teilmarkt.viewValue}}
+                    {{teilmarkt.viewValue}}
                 </button>
                 <div class="dropdown-menu"
                      ngbDropdownMenu>
