--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -42,6 +42,7 @@
 
         <div class="time-series"
              id="time-series"
+             (window:resize)="onResizeVerf($event)"
              echarts
              (chartInit)="onChartInit($event)"
              [options]="chartOption"></div>
