flurstueck search component/service

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -61,6 +61,7 @@
                      style="position: relative;">
                     <power-geosearch [adresse]="adresse"
                                      (selectResult)="onSearchSelect($event)"></power-geosearch>
+                    <power-flurstueck-search></power-flurstueck-search>
                 </div>
                 <div class="nav">
                     <button class="nav-link btn"
