--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -85,8 +85,8 @@
         </div>
         <div class="card-footer">
             <div class="float-right">
-                <div class="form-inline" *ngIf="total > perPage">
-                    <div class="form-group m-0 mr-2">
+                <div class="form-inline">
+                    <div class="form-group m-0 mr-2" *ngIf="total > perPage">
                         <select class="custom-select"
                                 aria-label="Formularanzahl pro Seite"
                                 aria-description="Wählen Sie aus, wie viele Formulare pro Seite angezeigt werden sollen."
