Added tagbox option for non editable input

--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -50,7 +50,8 @@
                (typeaheadOnSelect)="template = $event.item.id;"
                (keyup)="fetchTemplates()"
                i18n-placeholder
-               placeholder="Suchen">
+               placeholder="Suchen"
+               autocomplete="off">
     </div>
 
     <!-- tags -->
