flurstueck search component/service

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -61,9 +61,25 @@
                      style="position: relative;">
                     <power-geosearch [adresse]="adresse"
                                      (selectResult)="onSearchSelect($event)"></power-geosearch>
-                    <power-flurstueck-search></power-flurstueck-search>
                 </div>
                 <div class="nav">
+                    <button class="nav-link btn"
+                            type="button"
+                            (click)="flurstueckssearch.modal.open(flurstueckssearch.title)"
+                            alt="Flurstückssuche"
+                            title="Flurstückssuche"
+                            i18n-alt
+                            i18n-title>
+                        <svg width="20px"
+                             height="20px"
+                             viewBox="0 0 16 16"
+                             class="bi bi-bounding-box-circles"
+                             fill="currentColor"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                  d="M2 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM0 2a2 2 0 0 1 3.937-.5h8.126A2 2 0 1 1 14.5 3.937v8.126a2 2 0 1 1-2.437 2.437H3.937A2 2 0 1 1 1.5 12.063V3.937A2 2 0 0 1 0 2zm2.5 1.937v8.126c.703.18 1.256.734 1.437 1.437h8.126a2.004 2.004 0 0 1 1.437-1.437V3.937A2.004 2.004 0 0 1 12.063 2.5H3.937A2.004 2.004 0 0 1 2.5 3.937zM14 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM2 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm12 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+                        </svg>
+                    </button>
                     <button class="nav-link btn"
                             type="button"
                             (click)="enableLocationTracking()"
@@ -177,6 +193,23 @@
                                   d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
                             <path fill-rule="evenodd"
                                   d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+                        </svg>
+                    </button>
+                    <button class="nav-link btn"
+                            type="button"
+                            (click)="flurstueckssearch.modal.open(flurstueckssearch.title)"
+                            alt="Flurstückssuche"
+                            title="Flurstückssuche"
+                            i18n-alt
+                            i18n-title>
+                        <svg width="20px"
+                             height="20px"
+                             viewBox="0 0 16 16"
+                             class="bi bi-bounding-box-circles"
+                             fill="currentColor"
+                             xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                  d="M2 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM0 2a2 2 0 0 1 3.937-.5h8.126A2 2 0 1 1 14.5 3.937v8.126a2 2 0 1 1-2.437 2.437H3.937A2 2 0 1 1 1.5 12.063V3.937A2 2 0 0 1 0 2zm2.5 1.937v8.126c.703.18 1.256.734 1.437 1.437h8.126a2.004 2.004 0 0 1 1.437-1.437V3.937A2.004 2.004 0 0 1 12.063 2.5H3.937A2.004 2.004 0 0 1 2.5 3.937zM14 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM2 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm12 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
                         </svg>
                     </button>
                     <button class="nav-link btn"
@@ -539,3 +572,5 @@
                      unit="metric"></mgl-control>
     </mgl-map>
 </div>
+
+<power-flurstueck-search #flurstueckssearch></power-flurstueck-search>
