--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -254,7 +254,7 @@
                 <span class="ml-1" i18n>Formulare</span>
             </div>
             <div class="float-sm-right">
-                <div class="d-inline-block w-50 pr-2" style="min-width: 100px; max-width: 200px;">
+                <div class="d-inline-block w-50 pr-2 align-top" style="min-width: 100px; max-width: 200px;">
                     <input class="form-control"
                            id="form-search"
                            type="text"
