fix: Templates nicht auswählbar

--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -46,7 +46,7 @@
                [typeahead]="templateList"
                [typeaheadScrollable]="true"
                [typeaheadOptionsInScrollableView]="5"
-               typeaheadOptionField="extra"
+               typeaheadOptionField="extract"
                (typeaheadOnSelect)="template = $event.item.id;"
                (keyup)="fetchTemplates()"
                i18n-placeholder
